--- a/thanks.html
+++ b/thanks.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Hệ thống Trường Việt Mỹ VASS - Tiểu Học Quốc Tế - Trung Học Quốc Tế</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
+    <title>AES Việt Nam</title>
+    <link rel="preload" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" as="style" onload="this.rel = 'stylesheet'" />
+    <link rel="preload" href="./css/style.min.css" as="style" onload="this.rel = 'stylesheet'" />
+    <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon" />
     <script type="text/javascript">
         function writeCookie(name, value, days) {
             var date, expires;
@@ -64,58 +63,71 @@
             writeCookie("utm_content", utm_content, 30);
         }
     </script>
-    <!-- Google Tag Manager -->
-    <script>
-        (function (w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({
-                'gtm.start': new Date().getTime(),
-                event: 'gtm.js'
-            });
-            var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s),
-                dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src =
-                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-WPZ85ZT');
-    </script>
-    <!-- End Google Tag Manager -->
+
 </head>
 
 <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WPZ85ZT" height="0" width="0"
-            style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
     <header>
-        <div class="logo">
-            <picture>
-                <source srcset="./assets/images/logo.png">
-                <img src="./assets/images/logo.png" alt="Logo" class="img-fluid d-block mx-auto">
-            </picture>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <figure>
+                        <img src="./assets/images/logo.svg" alt="" class="img-fluid mx-auto" />
+                    </figure>
+                </a>
+            </div>
+        </nav>
     </header>
     <section id="thanks">
         <div class="content">
             <p>
-                Bạn đã đăng ký thành công !
+                Cảm ơn Quý Phụ huynh
             </p>
-            <figure>
-                <img src="./assets/images/check.png" alt="" class="img-fluid d-block mx-auto">
-            </figure>
             <p>
-                Chúng tôi sẽ liên hệ tư vấn trong thời gian sớm nhất!
+                Đã quan tâm đến chương trình học tập tại trường THPT Albert Einstein (AES). <span class="break"></span>
+                Bộ phận Tuyển sinh sẽ liên hệ tư vấn cho Quý Phụ huynh trong thời gian sớm nhất.
             </p>
-            <a href="index.html">Quay về Trang Chủ</a>
+            <a href="index.html">QUAY LẠI TRANG CHỦ</a>
         </div>
-
     </section>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <picture>
+                        <source srcset="./assets/images/logo.svg" />
+                        <img src="./assets/images/logo.svg" alt="Logo footer" class="img-fluid d-block mx-auto logo-ft" />
+                    </picture>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p class="title">
+                        TRƯỜNG TIỂU HỌC, THCS, THPT ALBERT EINSTEIN
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>
+                        Địa chỉ: Khu dân cư 13C, Đại lộ Nguyễn Văn Linh, xã Phong Phú,
+                        huyện Bình Chánh, TP.HCM.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>
+                        Copyright © 2020 Bản quyền thuộc về AES School <br />
+                        Bảo lưu toàn bộ quyền sở hữu.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
     </script>
 </body>
 
