--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>AES Việt Nam</title>
+    <title>AES Việt Nam - Chương trình giáo dục của Bang Victoria, Úc (VCE)</title>
     <link rel="preload" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" as="style" onload="this.rel = 'stylesheet'" />
     <link rel="preload" href="./css/style.min.css" as="style" onload="this.rel = 'stylesheet'" />
-    <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <script type="text/javascript">
         function writeCookie(name, value, days) {
             var date, expires;
@@ -92,14 +92,14 @@
                             </a>
                         </li>
                         <li class="nav-item page-scroll">
-                            <a class="nav-link" href="#cohoi">
+                            <a class="nav-link" href="#header2">
                                 <p>
                                     CƠ HỘI
                                 </p>
                             </a>
                         </li>
                         <li class="nav-item page-scroll">
-                            <a class="nav-link" href="#phuongphap">
+                            <a class="nav-link" href="#why">
                                 <p>
                                     PHƯƠNG PHÁP
                                 </p>
@@ -113,7 +113,7 @@
                             </a>
                         </li>
                         <li class="nav-item page-scroll">
-                            <a class="nav-link" href="#gioithieu">
+                            <a class="nav-link" href="#about-aes">
                                 <p>
                                     GIỚI THIỆU
                                 </p>
@@ -175,8 +175,8 @@
                     <div class="col-12 col-lg-6 my-auto">
                         <div class="content">
                             <p>
-                                <span>AES</span> tự hào là ngôi trường đầu tiên và
-                                <span>DUY NHẤT</span> tại Việt Nam cung cấp Chương trình và
+                                <span>AES</span> tự hào là ngôi trường <span>ĐẦU TIÊN VÀ
+                                    DUY NHẤT</span> tại Việt Nam cung cấp Chương trình và
                                 Chứng chỉ Giáo dục bang Victoria (Victorian Certificate of
                                 Education - VCE).
                             </p>
@@ -567,7 +567,7 @@
                 <div class="col-lg-12">
                     <picture>
                         <source srcset="./assets/images/logo.svg" />
-                        <img src="./assets/images/logo.svg" alt="Logo footer" class="img-fluid d-block mx-auto mb-1rem" />
+                        <img src="./assets/images/logo.svg" alt="Logo footer" class="img-fluid d-block mx-auto logo-ft" />
                     </picture>
                 </div>
             </div>
@@ -615,7 +615,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="./js/owl.carousel.min.js?v=2"></script>
     <script src="./js/common.js?v=3"></script>
 </body>
 
