--- a/thanks.html
+++ b/thanks.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>AES Việt Nam</title>
+    <title>AES Việt Nam - Chương trình giáo dục của Bang Victoria, Úc (VCE)</title>
     <link rel="preload" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" as="style" onload="this.rel = 'stylesheet'" />
     <link rel="preload" href="./css/style.min.css" as="style" onload="this.rel = 'stylesheet'" />
-    <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <script type="text/javascript">
         function writeCookie(name, value, days) {
             var date, expires;
