--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>AES Việt Nam - Chương trình giáo dục của Bang Victoria, Úc (VCE)</title>
-    <link rel="preload" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" as="style" onload="this.rel = 'stylesheet'" />
+    <link rel="preload" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"
+        as="style" onload="this.rel = 'stylesheet'" />
     <link rel="preload" href="./css/style.min.css" as="style" onload="this.rel = 'stylesheet'" />
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <script type="text/javascript">
         function writeCookie(name, value, days) {
@@ -79,7 +85,9 @@
                         <img src="./assets/images/logo.svg" alt="" class="img-fluid mx-auto" />
                     </figure>
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -200,7 +208,9 @@
                                 <div class="col-lg-4">
                                     <picture>
                                         <source srcset="./assets/images/cert.png" />
-                                        <img src="./assets/images/cert.png" alt="Header - hình 1" class="img-fluid d-block mx-auto" data-toggle="modal" data-target="#exampleModal" />
+                                        <img src="./assets/images/cert.png" alt="Header - hình 1"
+                                            class="img-fluid d-block mx-auto" data-toggle="modal"
+                                            data-target="#exampleModal" />
                                     </picture>
                                 </div>
                             </div>
@@ -223,7 +233,8 @@
                     <div class="col-lg-6 order-12 order-lg-1">
                         <picture>
                             <source srcset="./assets/images/why.png" />
-                            <img src="./assets/images/why.png" alt="TẠI SAO CHỌN CHƯƠNG TRÌNH VCE TẠI AES" class="img-fluid" />
+                            <img src="./assets/images/why.png" alt="TẠI SAO CHỌN CHƯƠNG TRÌNH VCE TẠI AES"
+                                class="img-fluid" />
                         </picture>
                     </div>
                     <div class="col-lg-6 order-1 order-lg-12 pad0">
@@ -281,7 +292,8 @@
                     <div class="col-12 col-lg-5">
                         <picture>
                             <source srcset="./assets/images/result.jpg" />
-                            <img src="./assets/images/result.jpg" alt=" KẾT QUẢ TỐT NGHIỆP VCE NĂM 2019 TẠI TRƯỜNG HAILEYBURY" class="img-fluid" />
+                            <img src="./assets/images/result.jpg"
+                                alt=" KẾT QUẢ TỐT NGHIỆP VCE NĂM 2019 TẠI TRƯỜNG HAILEYBURY" class="img-fluid" />
                         </picture>
                     </div>
                 </div>
@@ -495,7 +507,8 @@
                     <div class="col-12 col-lg-6">
                         <picture>
                             <source srcset="./assets/images/about.png" />
-                            <img src="./assets/images/about.png" alt="VỀ TRƯỜNG ALBERT EINSTEIN (AES)" class="img-fluid" />
+                            <img src="./assets/images/about.png" alt="VỀ TRƯỜNG ALBERT EINSTEIN (AES)"
+                                class="img-fluid" />
                         </picture>
                     </div>
                 </div>
@@ -567,7 +580,8 @@
                 <div class="col-lg-12">
                     <picture>
                         <source srcset="./assets/images/logo.svg" />
-                        <img src="./assets/images/logo.svg" alt="Logo footer" class="img-fluid d-block mx-auto logo-ft" />
+                        <img src="./assets/images/logo.svg" alt="Logo footer"
+                            class="img-fluid d-block mx-auto logo-ft" />
                     </picture>
                 </div>
             </div>
@@ -597,7 +611,8 @@
         </div>
     </footer>
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-body">
@@ -606,15 +621,20 @@
                     </button>
                     <picture>
                         <source srcset="./assets/images/Certificate.jpg" />
-                        <img src="./assets/images/Certificate.jpg" alt="Certificate" class="img-fluid d-block mx-auto mb-1rem" />
+                        <img src="./assets/images/Certificate.jpg" alt="Certificate"
+                            class="img-fluid d-block mx-auto mb-1rem" />
                     </picture>
                 </div>
             </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+    </script>
     <script src="./js/common.js?v=3"></script>
 </body>
 
