--- a/thanks.html
+++ b/thanks.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>AES Việt Nam - Chương trình giáo dục của Bang Victoria, Úc (VCE)</title>
-    <link rel="preload" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" as="style" onload="this.rel = 'stylesheet'" />
+    <link rel="preload" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"
+        as="style" onload="this.rel = 'stylesheet'" />
     <link rel="preload" href="./css/style.min.css" as="style" onload="this.rel = 'stylesheet'" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <script type="text/javascript">
         function writeCookie(name, value, days) {
@@ -96,7 +101,8 @@
                 <div class="col-lg-12">
                     <picture>
                         <source srcset="./assets/images/logo.svg" />
-                        <img src="./assets/images/logo.svg" alt="Logo footer" class="img-fluid d-block mx-auto logo-ft" />
+                        <img src="./assets/images/logo.svg" alt="Logo footer"
+                            class="img-fluid d-block mx-auto logo-ft" />
                     </picture>
                 </div>
             </div>
@@ -127,7 +133,8 @@
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
     </script>
 </body>
 
