align element vertically

--- a/index.html
+++ b/index.html
@@ -68,9 +68,31 @@
             writeCookie("utm_content", utm_content, 30);
         }
     </script>
+    <!-- Google Tag Manager -->
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-57CQMCS');
+    </script>
+    <!-- End Google Tag Manager -->
 </head>
 
-<body data-spy="scroll" data-target=".navbar" data-offset="80">
+<body data-spy="scroll" data-target=".navbar" data-offset="90">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-57CQMCS" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="btn_top">
         <figure>
             <img src="./assets/images/btn_top.png" alt="" class="img-fluid" />
@@ -78,7 +100,7 @@
     </div>
     <header class="fixed-top">
         <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container">
+            <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <figure>
                         <img src="./assets/images/logo.svg" alt="" class="img-fluid mx-auto" />
@@ -140,7 +162,7 @@
     </header>
     <main>
         <section id="trangchu">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 col-lg-7">
                         <p>
@@ -602,7 +624,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p>
-                        Copyright © 2020 Bản quyền thuộc về AES School <br />
+                        Copyright © 2020 Bản quyền thuộc về AES <br />
                         Bảo lưu toàn bộ quyền sở hữu.
                     </p>
                 </div>
